# omni-sight

./: .env.example  .gitignore  CLAUDE_CODE_SCAFFOLD_PROMPT.md  LICENSE  OmniSight_Project_Book_PhaseA_v4 (1) (2).docx (1).md  README.md  dev.bat  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
demo/: .pre-commit-config.yaml  Makefile
demo/.github/workflows/: ci.yml  docker-build.yml
demo/infra/docker/qdrant/: config.yaml
demo/libs/omnisight_common/: pyproject.toml
demo/libs/omnisight_messaging/: pyproject.toml
demo/memory/: MEMORY.md
demo/services/ai_worker_frame/: pyproject.toml
demo/services/ai_worker_frame/src/ai_worker_frame/: pipeline.py  store.py
demo/services/api_server/: pyproject.toml
demo/services/api_server/src/api_server/: main.py
demo/services/dashboard/: package.json
demo/services/ingestion/: Dockerfile  pyproject.toml
demo/services/pfm/: Dockerfile  pyproject.toml
demo/services/query_service/: pyproject.toml
demo/services/rag_forensics/: Dockerfile  pyproject.toml
demo/services/verification/: Dockerfile
demo/tests/: test_smoke.py
docs/design/: decision_log.md
infra/docker/rabbitmq/: definitions.json
libs/omnisight_common/src/omnisight_common/: __init__.py
memory/: project_nextjs_dashboard.md
services/ai_worker_frame/: Dockerfile  pyproject.toml
services/ai_worker_frame/src/ai_worker_frame/: __init__.py  __main__.py  embedder.py  pipeline.py  store.py
services/ai_worker_frame/tests/: test_embedder.py
services/ai_worker_temporal/: Dockerfile  pyproject.toml
services/ai_worker_temporal/src/ai_worker_temporal/: __init__.py
services/api_server/src/api_server/: main.py
services/dashboard/: pnpm-lock.yaml
services/dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
services/dashboard/src/components/: admin-guard.tsx  sidebar.tsx  top-bar.tsx
services/dashboard/src/lib/: auth.tsx  upload-store.tsx
services/ingestion/: Dockerfile
services/query_service/: Dockerfile
services/verification/: pyproject.toml
tests/: test_smoke.py
(+33 files in other folders)
