[project]
name = "ai-worker-frame"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.49",
    "Pillow>=10.0",
    "qdrant-client>=1.9",
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_worker_frame"]
