[project]
name = "api-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "ai-worker-frame",
    "ingestion",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_server"]

[tool.uv.sources]
ai-worker-frame = { workspace = true }
ingestion = { workspace = true }
